<?xml version="1.0" encoding="utf-8"?>
<com.emilsjolander.components.StickyScrollViewItems.StickyScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:id="@+id/scroll_detail"
    tools:context=".DetailUserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_connection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/redAccent"
            android:visibility="gone">

        <TextView
            android:id="@+id/txt_lose_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="13dp"
            android:drawablePadding="3dp"
            android:paddingBottom="15dp"
            android:text="@string/not_connection" />

        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/head_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_orange_gradasi"
            android:padding="22dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_user"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/user8" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.49" />

            <TextView
                android:id="@+id/txt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/image_user"
                tools:layout_editor_absoluteX="16dp"
                tools:text="@string/name" />

            <TextView
                android:id="@+id/txt_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/txt_name"
                tools:layout_editor_absoluteX="22dp"
                tools:text="@string/username" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/txt_username"
                tools:layout_editor_absoluteX="22dp">

                <TextView
                    android:id="@+id/txt_location_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:drawableStart="@drawable/ic_baseline_location_on_24_white"
                    android:drawablePadding="3dp"
                    tools:text="@string/location"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/txt_company_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:drawableStart="@drawable/ic_baseline_assignment_ind_24_white"
                    android:drawablePadding="3dp"
                    tools:text="@string/company"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/txt_repository"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_storage_24_white"
                    android:drawablePadding="3dp"
                    android:textColor="@color/white"
                    tools:text="6 repo" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:tag="sticky"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ff6600"
            app:tabTextColor="@android:color/white" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="550dp" />

    </LinearLayout>
</com.emilsjolander.components.StickyScrollViewItems.StickyScrollView>